<resources>
    <string name="app_name">สมุดโทรศัพท์ PABX</string>
    <string name="text_search_main">ค้นหาข้อมูล</string>
    <string name="text_adddata_main">เพิ่มข้อมูล</string>
    <string name="title_activity_search_host">search</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="text_spare_menu">เบอร์ว่าง</string>
    <string name="text_number_menu">ByNumber</string>
    <string name="text_name_menu">ByName</string>
    <string name="text_location_menu">ByLocation</string>
    <string name="text_save">บันทึก</string>
    <string name="logout">Logout</string>
    <string name="branch">ปิ่นเกล้า</string>
    <string name="text_when_logout">Logout ออกจากระบบแล้ว</string>
    <string name="text_when_login_failed_because_number_of_password">โปรดใส่รหัสผ่านมากกว่า 8 ตัวอักษร</string>
    <string name="text_when_register_failed_because_number_of_password">โปรดใส่รหัสผ่านมากกว่า 8 ตัวอักษร</string>
    <string name="text_when_login_failed_because_other">Login ไม่สำเร็จ เนื่องจาก :</string>
    <string name="text_when_register_failed_because_other">สมัครไม่สำเร็จ เนื่องจาก :</string>
    <string name="text_when_login_success">Login สำเร็จแล้ว</string>
    <string name="text_when_register_success">Login สำเร็จแล้ว</string>
    <string name="text_when_not_found_email">กรุณาป้อน Email</string>
    <string name="text_when_not_found_password">กรุณาป้อน Password</string>
    <string name="carbinet_1">E</string>
    <string name="carbinet_2">H</string>
    <string name="carbinet_3">TC1</string>
    <string name="carbinet_4">TC2</string>
    <string name="error_from_datasnapshot">เกิดข้อผิดพลาด :</string>
    <string name="text_when_saved">บันทึกข้อมูลเรียบร้อย :</string>
    <string name="text_when_not_enough_data">โปรดกรอกข้อมูล :</string>
    <string name="text_when_deleted_data">ลบข้อมูลเรียบร้อย</string>
    <string name="number_standby">เบอร์ว่าง</string>
    <string name="text_when_not_found_user">ไม่พบชื่อผู้ใช้งาน</string>
    <string name="text_when_not_found_data">ไม่พบข้อมูล</string>
    <string name="text_when_not_found_number">ไม่พบหมายเลข</string>

    <string name="Location">Location</string>
    <string name="showLocation">ห้อง PABX</string>
    <string name="show_text_location">ห้อง PABX</string>
    <string name="row">แถว</string>
    <string name="column">หมุด</string>
    <string name="text_H">H</string>
    <string name="text_TC1">TC1</string>
    <string name="text_TC2">TC2</string>
    <string name="addData_Header1">เพิ่มชื่อหรือตำแหน่งตู้โทรศัพท์</string>
    <string name="addData_header2">เพิ่มชื่อผู้ใช้งาน</string>
    <string name="addData_header3">เพิ่มข้อมูลหมายเลข</string>
    <string name="text_daleteLocation">ลบชื่อตู้</string>
    <string name="text_delete">ลบข้อมูล</string>
    <string name="hint_spare_name">ชื่อ ถ้าใส่ * หมายถึง spare</string>
    <string name="hint_spare_number">เพิ่มหมายเลข</string>
    <string name="hint_row">แถว</string>
    <string name="hint_column">หมุด</string>
    <string name="hint_number">หมายเลข</string>
    <string name="hint_addLocation">เพิ่มชื่อตู้</string>
    <string name="login">Login</string>
    <string name="login_thai">เข้าสู่ระบบ</string>
    <string name="register_thai">สมัครสมาชิก</string>
    <string name="register">Register</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="number_header1">ค้นหาข้อมูลด้วยหมายเลข</string>
    <string name="nunmer_hint_number">หมายเลข</string>
    <string name="nane_header1">ค้นหาข้อมูลด้วยชื่อผู้ใช้งาน</string>
    <string name="name_hint_name">ใส่ชื่อเพื่อค้นหา</string>
    <string name="location_header1">ค้นหาข้อมูลด้วยตำแหน่งหมุด</string>
    <string name="number_thai">หมายเลข</string>
    <string name="user_thai">ชื่อผู้ใช้งาน</string>
</resources>