<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E3F2FD"
    tools:context=".location.SearchByLocation">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_searchByPosition"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:textColor="@color/font"
        android:layout_marginTop="15dp"
        android:text="@string/location_header1"/>

    <Spinner
        android:id="@+id/spinner_Box_location_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_searchByPosition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <Spinner
        android:id="@+id/spinner_location_location_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/spinner_Box_location_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_row"
        app:layout_constraintTop_toBottomOf="@id/spinner_location_location_fragment"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="40dp"
        android:id="@+id/input_row_location_fragment"
        android:importantForAutofill="no" />
    <EditText
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:hint="@string/hint_column"
        app:layout_constraintTop_toTopOf="@id/input_row_location_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:id="@+id/input_column_location_fragment"
        android:importantForAutofill="no" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_search_main"
        app:layout_constraintTop_toBottomOf="@id/input_row_location_fragment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:id="@+id/btn_search_position_location_fragment"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_thai"
        android:textSize="18sp"
        android:textColor="@color/font"
        android:id="@+id/text_number_location_fragment"
        app:layout_constraintTop_toBottomOf="@id/btn_search_position_location_fragment"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginStart="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/purple_700"
        android:id="@+id/show_number_location_fragment"
        app:layout_constraintTop_toTopOf="@id/text_number_location_fragment"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_thai"
        android:textSize="18sp"
        android:textColor="@color/font"
        android:id="@+id/text_name_location_fragment"
        app:layout_constraintTop_toBottomOf="@id/text_number_location_fragment"
        app:layout_constraintStart_toStartOf="@id/text_number_location_fragment"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/purple_700"
        android:id="@+id/show_name_location_fragment"
        app:layout_constraintTop_toTopOf="@id/text_name_location_fragment"
        app:layout_constraintEnd_toEndOf="@id/show_number_location_fragment"/>


</androidx.constraintlayout.widget.ConstraintLayout>